# assignment

./: .cppcheck  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  Makefile  README.md
cmake_modules/: Packaging.cmake  (+7 more)
desktop_client/libs/os_abstraction_layer/: CMakeLists.txt
desktop_client/libs/os_abstraction_layer/include/os_abstraction_layer/: os_abstraction_layer.h
desktop_client/libs/os_abstraction_layer/src/: os_abstraction_layer.cpp
documentation/: CMakeLists.txt
documentation/build_pipeline_documentation/: CMakeLists.txt  artifact_description.tex  build_pipeline_documentation.tex
documentation/build_pipeline_documentation/diagrams/: artefact_generation.plantuml  package_usecases.plantuml
documentation/build_pipeline_documentation/diagrams/debian_packages/: external-sdk-deb.plantuml  internal-devel-deb.plantuml  onboard-devel-deb.plantuml
documentation/build_pipeline_documentation/diagrams/usecases/: internal_development.plantuml
documentation/development_process/software_build_process/: CMakeLists.txt  convert_dot_files_to_png.sh  development_processes.html  index.html  index.html.in
documentation/doxygen/: CMakeLists.txt  code_documentation.doxygen.in
documentation/requirements_engineering/: CMakeLists.txt  code.tex  code_style.tex  deliverables.tex  deliverables_documentation.tex  description_of_deliverables.tex  high_level_system_overview.tex  introduction.tex  library.bib  newcommand.tex  requirements_document.tex  software_in_the_loop.tex  system_requirements.tex  use_cases.tex  validation.tex
documentation/requirements_engineering/diagrams/: high_level_sys_overview.plantuml  software_in_the_loop.plantuml
flight_software/: CMakeLists.txt
flight_software/application/: CMakeLists.txt  main.cpp
flight_software/applications/: CMakeLists.txt
flight_software/applications/flight_software_application/: CMakeLists.txt  main.cpp
flight_software/applications/software_in_the_loop/: CMakeLists.txt  main.cpp  parameters.h
flight_software/flight_software_application/: CMakeLists.txt  main.cpp
flight_software/libs/: CMakeLists.txt
flight_software/libs/device_handler/: CMakeLists.txt
flight_software/libs/device_handler/tests/: mocks.h  unit_test.cpp
flight_software/libs/embedded_software/: CMakeLists.txt
flight_software/libs/embedded_software/linux_os_abstraction_layer/: CMakeLists.txt
flight_software/libs/embedded_software/linux_os_abstraction_layer/include/linux_os_abstraction_layer/: linux_os_abstraction_layer.h
flight_software/libs/embedded_software/linux_os_abstraction_layer/src/: linux_os_abstraction_layer.cpp
flight_software/libs/embedded_software/serializer/: CMakeLists.txt
flight_software/libs/embedded_software/serializer/include/serializer/: serializer.h
flight_software/libs/embedded_software/serializer/src/: serializer.cpp
flight_software/libs/embedded_software/serializer/tests/: unit_test.cpp
flight_software/libs/embedded_software/uart_imu_driver/: CMakeLists.txt
flight_software/libs/embedded_software/uart_imu_driver/src/: driver.cpp
flight_software/libs/embedded_software/uart_imu_driver/tests/: CMakeLists.txt  fixtures.h  mocks.h  unit_test.cpp  unit_tests.cpp
flight_software/libs/fake_imu/: CMakeLists.txt
flight_software/libs/fake_imu/include/fake_imu/: fake_imu.h  software_in_the_loop_constant.h
flight_software/libs/fake_imu/src/: fake_imu.cpp  utils.h
flight_software/libs/fake_imu/tests/: fixtures.h  mocks.h  unit_tests.cpp
flight_software/libs/ground_software/: CMakeLists.txt
flight_software/libs/ground_software/fake_imu/: CMakeLists.txt
flight_software/libs/ground_software/fake_imu/src/: fake_imu.cpp  utils.h
flight_software/libs/ground_software/fake_imu/tests/: fixtures.h  mocks.h  unit_test.cpp  unit_tests.cpp
flight_software/libs/os_abstraction_layer/: CMakeLists.txt
flight_software/libs/os_abstraction_layer/include/os_abstraction_layer/: linux_os_abstraction_layer.h  os_abstraction_layer.h  os_abstraction_layer_interface.h
flight_software/libs/os_abstraction_layer/src/: linux_os_abstraction_layer.cpp  os_abstraction_layer.cpp
flight_software/libs/uart_imu_driver/: CMakeLists.txt
flight_software/libs/uart_imu_driver/include/uart_imu_driver/: driver.h  driver_context.h
flight_software/libs/uart_imu_driver/src/: driver.cpp  driver_utils.cpp
flight_software/libs/uart_imu_driver/tests/: fixtures.h  mocks.h  unit_tests.cpp
flight_software/software_in_the_loop/: CMakeLists.txt  main.cpp  parameters.h
flight_software/system_interfaces/: CMakeLists.txt
flight_software/system_interfaces/communication_protocols/: CMakeLists.txt
flight_software/system_interfaces/communication_protocols/include/communication_protocols/: uart_imu.h
flight_software/system_interfaces/communication_protocols/include/uart_imu/: uart_imu.h
flight_software/system_interfaces/deployment_configuration/: CMakeLists.txt
flight_software/system_interfaces/deployment_configuration/include/flight_software_deployment_linux/: flight_software_linux_configuration.h
flight_software/system_interfaces/deployment_configuration/include/software_in_the_loop/: sil_configuration.h  software_in_the_loop_configuration.h
flight_software/system_interfaces/display_messages/include/display_messages/: bytes.h  imu_information.h
flight_software/system_interfaces/messages/: CMakeLists.txt
flight_software/system_interfaces/messages/include/messages/: driver_status.h  imu_data.h  imu_driver_status.h  imu_message.h
flight_software/system_interfaces/os_abstraction_layer/: CMakeLists.txt
flight_software/system_interfaces/serializer/include/serializer/: serializer.h
flight_software/system_interfaces/serializer/src/: serializer.cpp
flight_software/system_interfaces/serializer/tests/: unit_test.cpp
flight_software/test_utils/: CMakeLists.txt
flight_software/test_utils/display_messages/: CMakeLists.txt
flight_software/test_utils/display_messages/include/display_messages/: bytes.h  imu_information.h
flight_software/test_utils/mocks/: CMakeLists.txt
(+52 files in other folders)
