SET (FLIGHT_SOFTWARE_APP_NAME flight_software)
PROJECT (${FLIGHT_SOFTWARE_APP_NAME} LANGUAGES CXX)
SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY (system_interfaces)
ADD_SUBDIRECTORY (libs)
ADD_SUBDIRECTORY (flight_software_application)
ADD_SUBDIRECTORY (software_in_the_loop)

INCLUDE (Processes)
