SET (FLIGHT_SOFTWARE_APP_NAME flight_software)
PROJECT (
  ${FLIGHT_SOFTWARE_APP_NAME}
  VERSION ${GLOBAL_VERSION}
  LANGUAGES CXX)
SET (CMAKE_CXX_STANDARD 17)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY (system_interfaces)
ADD_SUBDIRECTORY (test_utils)
ADD_SUBDIRECTORY (libs)
ADD_SUBDIRECTORY (applications)

INCLUDE (Processes)
