SET (SOFTWARE_IN_LOOP_APP_NAME sil)

ADD_EXECUTABLE (${SOFTWARE_IN_LOOP_APP_NAME} main.cpp)
TARGET_INCLUDE_DIRECTORIES (${SOFTWARE_IN_LOOP_APP_NAME}
                            PRIVATE ${CMAKE_BINARY_DIR})
TARGET_LINK_LIBRARIES (${SOFTWARE_IN_LOOP_APP_NAME} PUBLIC fake_imu
                                                           os_abstraction_layer)

INSTALL (TARGETS ${SOFTWARE_IN_LOOP_APP_NAME} RUNTIME DESTINATION bin)
