INCLUDE (DocumentMakefileTarget)
SET (OUTPUT_FOLDER ${CMAKE_CURRENT_BINARY_DIR}/output)
CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/index.html
                ${OUTPUT_FOLDER}/index.html)

DOCUMENT_MAKEFILE_TARGET (WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} TARGET
                          packaging OUTPUT_DIRECTORY ${OUTPUT_FOLDER})

DOCUMENT_MAKEFILE_TARGET (WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} TARGET
                          documentation OUTPUT_DIRECTORY ${OUTPUT_FOLDER})

DOCUMENT_MAKEFILE_TARGET (WORKING_DIRECTORY ${CMAKE_BINARY_DIR} TARGET
                          code_documentation OUTPUT_DIRECTORY ${OUTPUT_FOLDER})

DOCUMENT_MAKEFILE_TARGET (
  WORKING_DIRECTORY ${CMAKE_BINARY_DIR} TARGET deliverables_documentation
  OUTPUT_DIRECTORY ${OUTPUT_FOLDER})

STRING (REPLACE ";" "\",\"" DOCUMENTED_MAKEFILE_TARGET_JSON
                "${DOCUMENTED_MAKEFILE_TARGET}")
SET (DOCUMENTED_MAKEFILE_TARGET_JSON "[\"${DOCUMENTED_MAKEFILE_TARGET_JSON}\"]")

CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/development_processes.html
                ${OUTPUT_FOLDER}/development_processes.html @ONLY)

IF (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
  INSTALL (
    DIRECTORY "${OUTPUT_FOLDER}/"
    DESTINATION "${CMAKE_INSTALL_DOCDIR}/software_build_process"
    COMPONENT developer-documentation)
ENDIF ()
