SET (LIBNAME communication_protocols)
SET (LIBHDRS include/${LIBNAME}/uart_imu.h)
ADD_LIBRARY (${LIBNAME} INTERFACE ${LIBHDRS})

TARGET_INCLUDE_DIRECTORIES (
  ${LIBNAME} INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES PUBLIC_HEADER "${LIBHDRS}")
INSTALL (TARGETS ${LIBNAME} PUBLIC_HEADER DESTINATION include/${LIBNAME}/
                                          COMPONENT Libraries)
