SET (LIBNAME messages)
SET (LIBHDRS include/messages/imu_driver_status.h include/${LIBNAME}/imu_data.h)
ADD_LIBRARY (${LIBNAME} INTERFACE ${LIBHDRS})
TARGET_LINK_LIBRARIES (${LIBNAME} INTERFACE communication_protocols)
TARGET_INCLUDE_DIRECTORIES (
  ${LIBNAME} INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
SET_TARGET_PROPERTIES (${LIBNAME} PROPERTIES PUBLIC_HEADER "${LIBHDRS}")
INSTALL (TARGETS ${LIBNAME} PUBLIC_HEADER DESTINATION include/${LIBNAME}/
                                          COMPONENT Libraries)
